update dockerfile to jdk8 and cleanup build